$Id: History,v 1.2 1999-04-28 14:19:29 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 28, 99 J.Allison (tag intercoms-01-00-02)
- Moved G4VVisManager and G4VGraphicsScene from graphics_reps.

Paulo Mora de Freitas (tag intercoms-01-00-01)
- Added abstract interface G4VFlavoredParallelWorld and
  G4VGlobalFastSimulationManager so we can decouple vis from parametrisation.

Dec 03, 98 J.Allison (tag intercoms-00-04-04)
- Protected G4UImanager::SetCoutDestination with #ifdef G4STREAM.

Dec 02, 98 M.Asai (tag intercoms-00-04-03)
- G4UnitsMessenger is constructed/destructed by G4UImanager.

Nov 27, 98 M.Asai (tag intercoms-00-04-02)
- G4UnitsMessenger has been inported from global/management to avoid a loop dependency.

Nov 25, 98 J.Allison (tag intercoms-00-04-01)
- Allowed quotation-mark-enclosed blank-embedded parameters in GetCurrentValue.
- "Cosmetic" change to G4UIparameter (M.Asai).

Nov 05, 98 M.Asai (tag intercoms-00-03-07)
- Move G4strstreambuf.hh to global category to avoid a loop dependency (M.Nagamatsu)
  affected files are G4UImanager.hh G4UImanager.cc, G4UIsession.hh.

Oct 26, 98 M.Asai (tag intercoms-00-03-06)