@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-04-28 14:19:29 johna Exp $
+$Id: History,v 1.3 1999-05-07 10:50:39 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 7th, 99 J.Allison
+- Added newVal.resize( parameter.entries() ) to G4UIcommand::SetParameter.
 
 Apr 28, 99 J.Allison (tag intercoms-01-00-02)
 - Moved G4VVisManager and G4VGraphicsScene from graphics_reps.
